--- a/index.html
+++ b/index.html
@@ -5,167 +5,7 @@
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
-    :root {
-      --primary-color: #00a600;
-      --background-light: #ffffff;
-      --background-dark: #121212;
-      --text-light: #000000;
-      --text-dark: #ffffff;
-    }
-
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      background-image: url('https://WhatsAppp images 2025-07-13 at 9:21:28.jpeg.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=1350&q=80');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      margin: 0;
-      padding: 0;
-      color: var(--text-light);
-      transition: background-color 0.3s, color 0.3s;
-    }
-
-    body.dark-mode {
-      background-color: var(--background-dark);
-      color: var(--text-dark);
-    }
-
-    .login-container {
-      width: 100%;
-      max-width: 400px;
-      margin: 40px auto;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.3);
-      border-radius: 4px;
-      overflow: hidden;
-      background: var(--background-light);
-    }
-
-    body.dark-mode .login-container {
-      background: #1e1e1e;
-      color: var(--text-dark);
-    }
-
-    .login-header {
-      background: #222;
-      color: white;
-      padding: 15px;
-      font-weight: bold;
-      text-align: center;
-      font-size: 1.4em;
-    }
-
-    .login-body {
-      padding: 20px;
-    }
-
-    .input-group {
-      display: flex;
-      align-items: center;
-      margin-bottom: 15px;
-      position: relative;
-    }
-
-    .input-group .prefix {
-      background: var(--primary-color);
-      color: white;
-      padding: 10px;
-      min-width: 50px;
-      border: 1px solid #ccc;
-      border-right: none;
-    }
-
-    .input-group input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-left: none;
-      font-size: 14px;
-      outline: none;
-    }
-
-    .input-group.password input {
-      padding-right: 40px;
-    }
-
-    .input-group.password .toggle {
-      position: absolute;
-      top: 50%;
-      right: 10px;
-      transform: translateY(-50%);
-      cursor: pointer;
-    }
-
-    .actions {
-      display: flex;
-      justify-content: space-between;
-      margin-bottom: 15px;
-      font-size: 14px;
-    }
-
-    .login-button {
-      width: 100%;
-      background: var(--primary-color);
-      color: white;
-      border: none;
-      padding: 12px;
-      font-size: 16px;
-      cursor: pointer;
-      position: relative;
-    }
-
-    .login-button:disabled {
-      opacity: 0.6;
-      cursor: not-allowed;
-    }
-
-    .spinner {
-      display: none;
-      width: 18px;
-      height: 18px;
-      border: 2px solid white;
-      border-top: 2px solid transparent;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      position: absolute;
-      right: 15px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    @keyframes spin {
-      to {
-        transform: translateY(-50%) rotate(360deg);
-      }
-    }
-
-    .signup-section {
-      text-align: center;
-      padding: 15px;
-      background: #f8f8f8;
-      font-size: 14px;
-    }
-
-    .signup-section a {
-      font-weight: bold;
-      text-decoration: none;
-      color: black;
-    }
-
-    @media (max-width: 500px) {
-      .login-container {
-        margin: 20px;
-      }
-    }
-
-    .error-message {
-      font-size: 12px;
-      color: red;
-      margin-top: -10px;
-      margin-bottom: 10px;
-    }
+    /* (Your existing styles here) */
   </style>
 </head>
 <body>
@@ -188,7 +28,14 @@
     </div>
 
     <div class="input-group password">
-      <input type="password" id="password" name="password" placeholder="Password" required>
+      <input
+        type="password"
+        id="password"
+        name="password"
+        placeholder="Password"
+        minlength="4"
+        required
+      >
       <span class="toggle">&#128065;</span>
     </div>
     <div id="passwordError" class="error-message"></div>
@@ -230,8 +77,8 @@
       isValid = false;
     }
 
-    if (password.value.length < 6) {
-      passwordError.textContent = 'Password must be at least 6 characters.';
+    if (password.value.length < 4) {
+      passwordError.textContent = 'Password must be at least 4 characters.';
       isValid = false;
     }
 
@@ -245,21 +92,22 @@
 
   document.querySelector('.toggle').addEventListener('click', function () {
     const passwordInput = document.querySelector('#password');
-    const type = passwordInput.getAttribute('type') === 'password' ? 'text' : 'password';
-    passwordInput.setAttribute('type', type);
+    passwordInput.setAttribute(
+      'type',
+      passwordInput.type === 'password' ? 'text' : 'password'
+    );
   });
 
   function toggleDarkMode() {
     document.body.classList.toggle('dark-mode');
   }
 
-  // Notify Android WebView if embedded (example)
   window.onload = () => {
-    if (window.AndroidInterface && typeof window.AndroidInterface.onPageLoaded === 'function') {
+    if (window.AndroidInterface?.onPageLoaded) {
       window.AndroidInterface.onPageLoaded();
     }
-  }
+  };
 </script>
 
 </body>
-</html
+</html>
