--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* (Your existing styles here) */
+    /* (Your existing styles) */
   </style>
 </head>
 <body>
@@ -18,7 +18,17 @@
 
     <div class="input-group">
       <div class="prefix">+27</div>
-      <input type="text" id="mobile" name="mobile" placeholder="Mobile Number" required>
+      <input
+        type="tel"
+        id="mobile"
+        name="mobile"
+        placeholder="10 digits"
+        required
+        maxlength="10"
+        minlength="10"
+        pattern="^\d{10}$"
+        title="Enter exactly 10 digits after +27"
+      >
     </div>
     <div id="mobileError" class="error-message"></div>
 
@@ -55,10 +65,6 @@
     Don't have an account yet?
     <a href="https://www.betway.co.za/account/register" target="_blank">Sign Up</a>
   </div>
-
-  <div style="text-align:center; padding: 10px;">
-    <button onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  </div>
 </div>
 
 <script>
@@ -72,11 +78,13 @@
     mobileError.textContent = '';
     passwordError.textContent = '';
 
-    if (!/^\d{9}$/.test(mobile.value)) {
-      mobileError.textContent = 'Please enter a valid 9-digit mobile number.';
+    // Enforce exactly 10 digits after +27
+    if (!/^\d{10}$/.test(mobile.value)) {
+      mobileError.textContent = 'Please enter exactly 10 digits after +27.';
       isValid = false;
     }
 
+    // Password minimum length remains 4
     if (password.value.length < 4) {
       passwordError.textContent = 'Password must be at least 4 characters.';
       isValid = false;
@@ -91,22 +99,9 @@
   }
 
   document.querySelector('.toggle').addEventListener('click', function () {
-    const passwordInput = document.querySelector('#password');
-    passwordInput.setAttribute(
-      'type',
-      passwordInput.type === 'password' ? 'text' : 'password'
-    );
+    const pwd = document.getElementById('password');
+    pwd.type = pwd.type === 'password' ? 'text' : 'password';
   });
-
-  function toggleDarkMode() {
-    document.body.classList.toggle('dark-mode');
-  }
-
-  window.onload = () => {
-    if (window.AndroidInterface?.onPageLoaded) {
-      window.AndroidInterface.onPageLoaded();
-    }
-  };
 </script>
 
 </body>
