--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       margin: 0;
-      background: url('https://backround/images/home-hero/hero-bg-desktop.jpg') no-repeat center center fixed;
+      background: url('index.html.jpg/home-hero/hero-bg-desktop.jpg') no-repeat center center fixed;
       background-size: cover;
     }
 
