--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
   <style>
     * {
       box-sizing: border-box;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Roboto', sans-htmlserif;
     }
 
     body {
       margin: 0;
-      background: url('index.html.jpg/home-hero/hero-bg-desktop.jpg') no-repeat center center fixed;
-      background-size: cover;
+      background-image: url('backround.jpg')
     }
 
     .modal-overlay {
@@ -272,4 +271,4 @@
   </script>
 
 </body>
-</html>
+</htm
