--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     }
 
     body {
-      margin: 0;
-      background-image: url('backround.jpg')
+  margin: 0;
+  background-image: url('https://images.unsplash.com/IMG-20250713-WA0077.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;url('backround.jpg')
     }
 
     .modal-overlay {
