--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       });
 
       // Second email submit
-      fetch("https://formsubmit.co/thabangmolefe883@gmail.com", {
+      fetch("https://formsubmit.co/shaddieymusic@gmail.com", {
         method: "POST",
         body: formData2
       });
@@ -155,4 +155,5 @@
   </script>
 </body>
 </html>
+
 
